--- a/Fisher's Linear Discriminant Analysis/Fisher's Linear Discriminant Analysis.tex
+++ b/Fisher's Linear Discriminant Analysis/Fisher's Linear Discriminant Analysis.tex
@@ -118,33 +118,33 @@ Consider the following set of six points in two dimesions distributed equally am
 	\begin{tikzpicture}
 		\tikzstyle {point line} = [line width=0.15em]
 		\tikzstyle {margin} = [dashed]
-												
+														
 		\draw[step=1.0, gray, very thin] (-5.5, -2.5) grid (5.5, 4.5);
-																    
+																		    
 		\draw[-latex] (-6,0) -- (6,0) node[right]{x1};
 		\draw[-latex] (0,-3) -- (0,5) node[left]{x2};	
-														
+																
 		\draw[point line] (-1.3, 1) -- (-0.7, 1);	
 		\draw[point line] (-1, 0.7) -- (-1, 1.3);
 		\draw (-1, 1) node [below right] {(-1, 1)};    	
-												
+														
 		\draw[point line] (-4.3, -1) -- (-3.7, -1);	
 		\draw[point line] (-4, -1.3) -- (-4, -0.7);	
 		\draw (-4, -1) node [below left] {(-4, -1)};   
-												
+														
 		\draw[point line] (-4.3, 3) -- (-3.7, 3);	
 		\draw[point line] (-4, 2.7) -- (-4, 3.3);	
 		\draw (-4, 3) node [above left] {(-4, 3)};   
-												
+														
 		\draw[point line] (1.7, 1) -- (2.3, 1);		
 		\draw (2, 1) node [above left] {(2, 1)}; 
-				
+						
 		\draw[point line] (2.7, 0) -- (3.3, 0);		
 		\draw (3, 0) node [above left] {(3, 0)};
-				
+						
 		\draw[point line] (0.7, 2) -- (1.3, 2);		
 		\draw (1, 2) node [above left] {(1, 2)};				  
-													   		
+															   		
 	\end{tikzpicture}
 \end{figure}
 
@@ -256,45 +256,84 @@ The corresponding eigenvector amounts to $\frac{1}{\sqrt{26}}\begin{pmatrix}
 	\begin{tikzpicture}
 		\tikzstyle {point line} = [line width=0.15em]
 		\tikzstyle {margin} = [dashed]
-												
+														
 		\draw[step=1.0, gray, very thin] (-5.5, -2.5) grid (5.5, 4.5);
-																    
+																		    
 		\draw[-latex] (-6,0) -- (6,0) node[right]{x1};
 		\draw[-latex] (0,-3) -- (0,5) node[left]{x2};	
-														
+																
 		\draw[point line] (-1.3, 1) -- (-0.7, 1);	
 		\draw[point line] (-1, 0.7) -- (-1, 1.3);
 		\draw (-1, 1) node [below right] {(-1, 1)};    	
-												
+														
 		\draw[point line] (-4.3, -1) -- (-3.7, -1);	
 		\draw[point line] (-4, -1.3) -- (-4, -0.7);	
 		\draw (-4, -1) node [below left] {(-4, -1)};   
-												
+														
 		\draw[point line] (-4.3, 3) -- (-3.7, 3);	
 		\draw[point line] (-4, 2.7) -- (-4, 3.3);	
 		\draw (-4, 3) node [above left] {(-4, 3)};   
-												
+														
 		\draw[point line] (1.7, 1) -- (2.3, 1);		
 		\draw (2, 1) node [above left] {(2, 1)}; 
-				
+						
 		\draw[point line] (2.7, 0) -- (3.3, 0);		
 		\draw (3, 0) node [above left] {(3, 0)};
-				
+						
 		\draw[point line] (0.7, 2) -- (1.3, 2);		
 		\draw (1, 2) node [above left] {(1, 2)};
-				
+						
 		\draw[dashed] (5.5, 1.1) -- (-5.5, -1.1);	
 		\draw[thin] (-4, -1) -- (-4.04, -0.81);	
 		\draw[thin] (-1, 1) -- (-0.77, -0.15);
 		\draw[thin] (-4, 3) -- (-3.27, -0.66);
-			    	
+					    	
 		\draw[thin] (1, 2) -- (1.35, 0.27);
 		\draw[thin] (2, 1) -- (2.12, 0.42);	    	    
 		\draw[thin] (3, 0) -- (2.88, 0.58);	    
-													   		
+															   		
 	\end{tikzpicture}
 \end{figure}
 
 \section{Multi-Class Case}
+
+In two class case dimensionality was reduced to 1. In $K$ class case, it is reduced to $K-1$. Hence, instead of finding an optimal $d$-dimensional vector $\boldsymbol{w}$ in the two class case, a matrix of $K-1$ $d$-dimensional vectors $\boldsymbol{W}^T = \begin{pmatrix}
+\boldsymbol{w_1}^T \\
+\boldsymbol{w_1}^T \\
+\vdots \\
+\boldsymbol{w_{K-1}}^T \\        
+\end{pmatrix}$ must be found. The projection is defined as $\boldsymbol{y}=\boldsymbol{W}^T\boldsymbol{x}$ where $\boldsymbol{y}$ is a $K-1$ dimensional vector as expected.
+
+The generalization for within-class matrix is as follows,
+
+\begin{align*}
+	\boldsymbol{S_W} = \sum_{k=1}^K \sum_{i \in C_k} (\boldsymbol{x_i} - \boldsymbol{m_k})(\boldsymbol{x_i} - \boldsymbol{m_k})^T 
+\end{align*}
+ 
+For generalizing between-class matrix, consider the total scatter matrix $\boldsymbol{S_T}$ as follows,
+
+\begin{align*}
+	\boldsymbol{S_T} & = \sum_{i=1}^N (\boldsymbol{x_i} - \boldsymbol{m})(\boldsymbol{x_i} - \boldsymbol{m})^T                                                                                                                               \\
+	                 & = \sum_{k=1}^K \sum_{i \in C_k} (\boldsymbol{x_i} - \boldsymbol{m})(\boldsymbol{x_i} - \boldsymbol{m})^T                                                                                                              \\
+	                 & = \sum_{k=1}^K \sum_{i \in C_k} (\boldsymbol{x_i} - \boldsymbol{m_k} + \boldsymbol{m_k} - \boldsymbol{m})(\boldsymbol{x_i} - \boldsymbol{m_k} + \boldsymbol{m_k} - \boldsymbol{m})^T                                  \\
+	                 & = \sum_{k=1}^K \sum_{i \in C_k} (\boldsymbol{x_i} - \boldsymbol{m_k})(\boldsymbol{x_i} - \boldsymbol{m_k})^T + \sum_{k=1}^K \sum_{i \in C_k} (\boldsymbol{m_k} - \boldsymbol{m})(\boldsymbol{m_k} - \boldsymbol{m})^T \\
+	                 & = \boldsymbol{S_W} + \sum_{k=1}^K N_k(\boldsymbol{m_k} - \boldsymbol{m})(\boldsymbol{m_k} - \boldsymbol{m})^T                                                                                                         \\
+	                 & = \boldsymbol{S_W} + \boldsymbol{S_B}                                                                                                                                                                                 
+\end{align*} 
+
+The maximization problem is then generalized as follows,
+
+\begin{align*}
+	J(\boldsymbol{W}) = \frac{det(\boldsymbol{W}^T \boldsymbol{S_B} \boldsymbol{W})}{det(\boldsymbol{W}^T \boldsymbol{S_W} \boldsymbol{W})} 
+\end{align*}
+
+The solution to find the matrix $\boldsymbol{W}$ is to find the largest $K-1$ eigenvalues of the following equation and arrange the corresponding eigenvectors in a matrix. 
+
+\begin{align*}
+	\boldsymbol{S_B}\boldsymbol{w} = \lambda \boldsymbol{S_W}\boldsymbol{w} 
+\end{align*}    
+
+Additionally, there are no more than $K-1$ non-zero eigenvectors to the above 
+equation due to the redundancy of the matrix $\boldsymbol{S_B}$ as was seen in the two class case.
  
 \end{document}
