--- a/Hidden Markov Models/Hidden Markov Models.tex
+++ b/Hidden Markov Models/Hidden Markov Models.tex
@@ -22,7 +22,7 @@ Hidden Markov Models(HMMs) are statistical tools to model sequential observation
 \begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=5cm,
 		semithick]
-						
+								
 		\node[initial,state] (I)                    {$$};
 		\node[state]         (S) [below left of=I] {$S$};
 		\node[state]         (T) [below right of=I] {$T$};
@@ -32,7 +32,7 @@ Hidden Markov Models(HMMs) are statistical tools to model sequential observation
 		\node[rectangle]         (TX) [below left of=T,yshift=-1.2cm,xshift=1cm]     {$X$};
 		\node[rectangle]         (TY) [below of=T]     {$Y$};  
 		\node[rectangle]         (TZ) [below right of=T,yshift=-1.2cm,xshift=-1cm]     {$Z$};  
-						
+								
 		\path (I) edge [bend right]    node {0.6} (S)
 		edge [bend left]     node {0.4} (T)
 		(S) edge [loop left]    node {0.7} (S)
@@ -136,7 +136,7 @@ To visualize the above calculation, consider the following diagrammatic represnt
 \begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
 		semithick]
-						
+								
 		\node[state] (Start)                    {$Start$};
 		\node[state] (S1) [above right of=Start] {$S$};
 		\node[state] (T1) [below right of=Start] {$T$};
@@ -148,7 +148,7 @@ To visualize the above calculation, consider the following diagrammatic represnt
 		\node [rectangle, node distance=2cm] (Z) [above of=S1] {Z};
 		\node [rectangle, node distance=2cm] (X) [above of=S2] {X};
 		\node [rectangle, node distance=2cm] (Y) [above of=S3] {Y};						
-						                
+								                
 		\path (Start) edge  node {0.6} (S1)
 		edge  node {0.4} (T1)
 		(S1) edge  node {0.5*0.7} (S2)
@@ -176,7 +176,7 @@ Dynamic Programming can be used to circumvent enumeration and speed up the compu
 \begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
 		semithick]
-						
+								
 		\node[state] (Start)                    {$1$};
 		\node[state] (S1) [above right of=Start] {$0.6$};
 		\node[rectangle, node distance=2cm] (D1) [right of=S1] {$=1*0.6$};
@@ -192,14 +192,14 @@ Dynamic Programming can be used to circumvent enumeration and speed up the compu
 \begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
 		semithick]
-						
+								
 		\node[state] (S1) {$0.6$};
 		\node[state] (T1) [below of=S1] {$0.4$};
 		\node[state] (S2) [right of=S1] {$0.226$};
 		\node[rectangle, node distance=4cm] (D2) [right of=S2] {$=0.6*0.5*0.7 + 0.4*0.1*0.4$};	
 		\node[state] (T2) [right of=T1] {$0.114$};
 		\node[rectangle, node distance=4cm] (D2) [right of=T2] {$=0.6*0.5*0.3 + 0.4*0.1*0.6$};				
-			                
+					                
 		\path 
 		(S1) edge  node {0.5*0.7} (S2)
 		edge  node [pos=0.2] {0.5*0.3} (T2)
@@ -213,15 +213,15 @@ Dynamic Programming can be used to circumvent enumeration and speed up the compu
 \begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
 		semithick]
-						
+								
 		\node[state] (S2) {$0.226$};
 		\node[state] (T2) [below of=S2] {$0.114$};
 		\node[state] (S3) [right of=S2] {$0.04774$};
 		\node[rectangle, node distance=4cm] (D3) [right of=S3] {$=0.226*0.1*0.7 + 0.114*0.7*0.4$};
 		\node[state] (T3) [right of=T2] {$0.05466$};
 		\node[rectangle, node distance=4cm] (D3) [right of=T3] {$=0.226*0.1*0.3 + 0.114*0.7*0.6$};
-					
-						                
+							
+								                
 		\path 
 		(S2) edge  node {0.1*0.7} (S3)
 		edge node [pos=0.2] {0.1*0.3} (T3)
@@ -235,7 +235,7 @@ Dynamic Programming can be used to circumvent enumeration and speed up the compu
 \begin{center}
 	\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=4cm,
 		semithick]
-						
+								
 		\node[state] (S3) {$0.04774$};
 		\node[state] (T3) [below of=S3] {$0.05466$};
 		\node[state] (End) [above right of=T3] {$0.030028$};
@@ -248,29 +248,31 @@ Dynamic Programming can be used to circumvent enumeration and speed up the compu
 
 In this algorithm, each node on the right keeps track of sum of values of all paths from $Start$ to that node denoted by $\alpha_t(state)$.
 
-\begin{align*}
-	\alpha_0(Start) & = 1.0      \\
-	\alpha_1(S)     & = 0.6      \\
-	\alpha_1(T)     & = 0.4      \\
-	\alpha_2(S)     & = 0.226    \\
-	\alpha_2(T)     & = 0.114    \\
-	\alpha_3(S)     & = 0.04774  \\
-	\alpha_3(T)     & = 0.05466  \\
-	\alpha_4(End)   & = 0.030028 
-\end{align*}
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{c|c|c|c}
+		\toprule
+		              & $t=1$ & $t=2$ & $t=3$   \\
+		\midrule
+		$\alpha_t(S)$ & 0.6   & 0.226 & 0.04774 \\
+		$\alpha_t(T)$ & 0.4   & 0.114 & 0.05466 \\
+		\bottomrule
+	\end{tabular}
+\end{table}
 
 The same algorithm can be run backwards from the $End$ node and work its way towards the $Start$ node. Now, each node in the left will keep track of sum of values of all paths from $End$ to that node denoted by $\beta_t(state)$.
 
-\begin{align*}
-	\beta_4(Start) & = 1.0      \\
-	\beta_3(S)     & = 0.4      \\
-	\beta_3(T)     & = 0.2      \\
-	\beta_2(S)     & = 0.034    \\
-	\beta_2(T)     & = 0.196    \\
-	\beta_1(S)     & = 0.0413   \\
-	\beta_1(T)     & = 0.01312  \\
-	\beta_0(End)   & = 0.030028 
-\end{align*}
+\begin{table}[h!]
+	\centering
+	\begin{tabular}{c|c|c|c}
+		\toprule
+		             & $t=1$   & $t=2$ & $t=3$ \\
+		\midrule
+		$\beta_t(S)$ & 0.0413  & 0.034 & 0.4   \\
+		$\beta_t(T)$ & 0.01312 & 0.196 & 0.2   \\
+		\bottomrule
+	\end{tabular}
+\end{table}
 
 It is apparent that the following relation must hold,
 
@@ -279,6 +281,24 @@ It is apparent that the following relation must hold,
 \end{align*}
  
 \subsection{The Decoding Problem}
+
+Given a HMM, $\lambda = (A, B, \pi)$ and a set of observations O, find the most likely sequence of hidden states that led the model to emit O. The solution to this is straightforward. At each time step, the state corrresponding to maximum value of $\alpha_t(state)*\beta_t(state)$ is chosen.
+
+\begin{table}[h!]
+	\centering
+	\caption{Decoding solution}
+	\label{tab:table2}
+	\begin{tabular}{c|c|c|c}
+		\toprule
+		             & $t=1$       & $t=2$       & $t=3$       \\
+		\midrule
+		S            & 0.6*0.0413  & 0.226*0.034 & 0.04774*0.4 \\
+		T            & 0.4*0.01312 & 0.114*0.196 & 0.05466*0.2 \\
+		\midrule
+		Chosen State & S           & T           & S           \\
+		\bottomrule
+	\end{tabular}
+\end{table}
 
 \subsection{The Learning Problem}
 
