--- a/Hidden Markov Models/Hidden Markov Models.tex
+++ b/Hidden Markov Models/Hidden Markov Models.tex
@@ -354,4 +354,8 @@ Similarly, $B(S \rightarrow OS)$ is estimated by,
 
 This completes the discussion of the solution to the learning problem in HMMs.
 
+\section{Applications}
+
+HMMs are widely used in speech recognition, hand writing recognition, part of speech tagging, DNA sequence analysis etc. Wherever there is sequential aspect to data and the data can be thought of as arising out of an underlying simpler hidden probabilistic process, HMMs may be suited for application.  
+
 \end{document}
